<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">XML-parsing</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_list_usuarios">list_usuarios</string>
    <string name="title_activity_vista_individual">vista_individual</string>
    <string name="id_alumno">ID</string>
    <string name="nombre">Usuario</string>
    <string name="apellido_p">Apellido Paterno</string>
    <string name="apellido_m">Apellido Materno</string>
    <string name="carrera">carrera</string>
</resources>
